# slurm-launcher

./: .gitignore  README.md  pyproject.toml
examples/: demo_eval.py  demo_train.py  remote_launcher_config.demo.py  remote_launcher_config.mn5.example.py
launcher/: __init__.py  cli.py  core.py  download_logs.py  init_wizard.py  tracking.py
launcher/templates/: config.py.template
scripts/: download_logs.py  init_wrapper_repo.sh
